[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection"
version = "0.1.0"
description = "Fraud detection AI Agent for elderly people"
authors = [
    {name = "Jinya Sakruai", email = "gab102manda100@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "websockets",
    "twilio",    
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.isort]
known-third-party = ['optuna']
lines-after-imports = 2
force-single-line = true
force-sort-within-sections = true
order-by-type = false

[tool.mypy]
# Options configure mypy's strict mode.
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
extra_checks = true
no_implicit_reexport = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = [
    ".venv/",
    "venv/",
    "build/",
    "work/",
    "test_scripts/",
    ".*/.ipynb_checkpoints/.*",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]